Found and fixed a bug where the header would get too crowded on mobile devices.

--- a/css/unprefixedstyle.css
+++ b/css/unprefixedstyle.css
@@ -286,6 +286,9 @@ main > section:target:before{
 	.letterheadContainer{
 		 flex-direction: column;
 	}
+	header p{
+		line-height: 2.2rem;
+	}
 	.letterheadContainer img{
 		 max-width: 250px;
 		 align-self: center;
